--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -138,8 +138,8 @@ post-list:
 home:
   title: Welcome
   button_name: Home
-  new_posts_title: New Articles
-  new_posts_show_more_button: View More ...
+  new_posts_title: Recent Articles
+  new_posts_show_more_button: More...
 
 # for archives layout
 archives:
@@ -173,9 +173,9 @@ privacy-policy:
 
 # constants to be replaced for
 constants:
-  greetings: Test1
-  welcome: Test2
-  sample: One Stop Device Lab
+  greetings: Welcome to 1SLab.com
+  welcome: Welcome
+  sample: One-Stop Device Lab
 
 # for contact form
 contact_form:
