--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -175,7 +175,7 @@ privacy-policy:
 constants:
   greetings: Welcome to 1SLab.com
   welcome: Welcome
-  sample: One-Stop Device Lab
+  sample: One-Stop Lab
 
 # for contact form
 contact_form:
