--- a/_posts/2022-02-10-Test-Post.markdown
+++ b/_posts/2022-02-10-Test-Post.markdown
@@ -1,15 +1,15 @@
 ---
 # multilingual page pair id, this must pair with translations of this page. (This name must be unique)
-lng_pair: id_Examples
-title: Examples
+lng_pair: id_Test_Post
+title: Test Post
 
 # post specific
 # if not specified, .name will be used from _data/owner/[language].yml
 author: Mr. Green's Workshop
 # multiple category is not supported
-category: jekyll
+category: Test
 # multiple tag entries are possible
-tags: [jekyll, sample, example post]
+tags: [debug, test post]
 # thumbnail image for post
 img: ":post_pic1.jpg"
 # disable comments on this page
@@ -36,7 +36,7 @@ date: 2022-02-10 08:11:06 +0900
 # exclude from search engines
 #search_engine_exclude: true
 # to disable this page, simply set published: false or delete this file
-#published: false
+published: false
 ---
 
 <!-- outline-start -->
