--- a/_posts/2024-12-04-About-Us.markdown
+++ b/_posts/2024-12-04-About-Us.markdown
@@ -46,7 +46,7 @@ I have always loved technology. As a kid, I dreamed about building computers and
 
 Over time, I became a professional engineer and team leader, designing electronic devices and automation systems across a wide range of fields, from telecommunications to drones.
 
-In 2024, my friends and I started [1SLab.com](/) to follow our passion. Our goal is to share our knowledge, help people create amazing devices that improve lives, and support the exploration of our planet and beyond. 
+In 2024, my friends and I started [1SLab.com](/) to follow our passion. And oh no—it’s not about slabs! Our goal is to create a one-stop place to share knowledge, help people design amazing devices that improve lives, and support the exploration of our planet—and maybe, one day, even beyond.
 
 Feel free to explore this blog, follow us on social media, or contact us with your questions, ideas, or proposals. We would love to hear from you!
 
