Tuning; Building Device post

--- a/_posts/2024-12-04-Who-We-Are.markdown
+++ b/_posts/2024-12-04-Who-We-Are.markdown
@@ -1,7 +1,7 @@
 ---
 # multilingual page pair id, this must pair with translations of this page. (This name must be unique)
-lng_pair: id_abous_us
-title: About Us
+lng_pair: id_who_we_are
+title: Who We Are
 
 # post specific
 # if not specified, .name will be used from _data/owner/[language].yml
@@ -38,16 +38,19 @@ on_site_search_exclude: true
 # to disable this page, simply set published: false or delete this file
 #published: false
 ---
-![How can I use these things in my new device design?](:Dmitrijs-2020.jpg)
+![How can I use these things in my new device design?](:Dmitrijs-2020.jpg){:data-align="center"}
 
-Hello! It’s great to meet you here in this cozy corner of the Internet! My name is [Dmitrijs Ovsjannikovs](https://www.linkedin.com/in/dmivs/)—but you can call me Dima.
+Hey! It’s great to meet you here in this cozy corner of the Internet. My name is [Dima](https://www.linkedin.com/in/dmivs/), and I’ve been designing hardware and software my entire life.
 
 I have always loved technology. As a kid, I dreamed about building computers and exploring space. Over the years, I have worked on many exciting projects: reverse-engineering old game consoles, improving Japanese TV studios, shaking buildings with powerful motors, and even taming fire-throwing machines!
 
 Over time, I became a professional engineer and team leader, designing electronic devices and automation systems across a wide range of fields, from telecommunications to drones.
 
-In 2024, my friends and I started [1SLab.com](/) to follow our passion. And oh no—it’s not about slabs! Our goal is to create a one-stop place to share knowledge, help people design amazing devices that improve lives, and support the exploration of our planet—and maybe, one day, even beyond.
+In 2024, my friends and I started [1SLab.com](/) to follow our passion. And oh no—it’s not about slabs! We’re a group of professional device engineers based in Riga, Latvia—country, located at the North-East of the European Union.
+![European Union in 2024](:EU-map.png){:data-align="center"}
 
-Feel free to explore this blog, follow us on social media, or contact us with your questions, ideas, or proposals. We would love to hear from you!
+Our goal is to create a one-stop place to share our knowledge, help people design amazing devices that improve lives, and support the exploration of our planet—and maybe, one day, even beyond.
 
-[E-mail](mailto:mail@1slab.com) ~ [Linkedin](https://www.linkedin.com/company/1slab) ~ [Facebook](https://www.facebook.com/1slab/) ~ [Youtube](https://www.youtube.com/@1SLab_en)
+Feel free to explore our blog, follow us on social media, or contact us with your questions, ideas, or proposals. We would love to hear from you!
+
+[E-mail](mailto:mail@1slab.com?subject=Hey%201SLab.com!) ~ [Linkedin](https://www.linkedin.com/company/1slab) ~ [Facebook](https://www.facebook.com/1slab/) ~ [Youtube](https://www.youtube.com/@1SLab_en)
