--- a/_posts/2022-02-10-Test-Post.markdown
+++ b/_posts/2022-02-10-Test-Post.markdown
@@ -37,6 +37,7 @@ date: 2022-02-10 08:11:06 +0900
 #search_engine_exclude: true
 # to disable this page, simply set published: false or delete this file
 published: false
+#published: true
 ---
 
 <!-- outline-start -->
