--- a/_posts/2024-12-04-Who-We-Are.markdown
+++ b/_posts/2024-12-04-Who-We-Are.markdown
@@ -40,8 +40,8 @@ on_site_search_exclude: true
 ---
 ![1S Lab locations](:1slab-locations-v3.png){:data-align="center"}
 \
-[1SLab.com](/) is a group of professional device engineers based in Riga, Latvia—a country in Northeastern Europe and a member of the [European Union](https://en.wikipedia.org/wiki/European_Union) and [Schengen Area](https://en.wikipedia.org/wiki/Schengen_Area). And oh no—it’s not about slabs! Our mission is to be a one-stop hub for [sharing](/tabs/blog/) our knowledge, [designing amazing devices](/posts/2024-12-06-Building_Electronic_Device) that enhance lives, drive business success, and push the boundaries of exploration in our world and beyond.
+[1SLab.com](/) is a group of professional device engineers based in Riga, Latvia—a country in Northeastern Europe and a member of the [European Union](https://en.wikipedia.org/wiki/European_Union) and [Schengen Area](https://en.wikipedia.org/wiki/Schengen_Area). And oh no—it’s not about slabs! Our mission is to be a one-stop	 hub for [sharing](/tabs/blog/) our knowledge, [designing amazing devices](/posts/2024-12-06-Building_Electronic_Device) that enhance lives, drive business success, and push the boundaries of exploration in our world and beyond.
 
 ***
 
-[E-mail](mailto:mail@1slab.com?subject=Hey%201SLab.com!) -- [Linkedin](https://www.linkedin.com/company/1slab) -- [Facebook](https://www.facebook.com/1slab/) -- [Youtube](https://www.youtube.com/@1SLab_en)
+[Our History](/posts/2024-12-05-Our-History) -- [E-mail](mailto:mail@1slab.com?subject=Hey%201SLab.com!) -- [Linkedin](https://www.linkedin.com/company/1slab) -- [Facebook](https://www.facebook.com/1slab/) -- [Youtube](https://www.youtube.com/@1SLab_en)
