maminor text adjustment

--- a/_posts/2024-12-05-Who_We_Are.markdown
+++ b/_posts/2024-12-05-Who_We_Are.markdown
@@ -46,6 +46,6 @@ I have always loved technology. As a kid, I dreamed about building computers and
 
 Over time, I became a professional engineer and team leader, designing electronic devices and automation systems across a wide range of fields, from telecommunications to drones.
 
-In 2024, I started [1S Lab](/) to create a place where my friends and I could follow our passion, share our knowledge, help people design amazing devices that improve lives, help businesses thrive, and support the exploration of our planet—and maybe, one day, even beyond.
+In 2024, I started [1S Lab](/) to create a place where my friends and I could follow our passion, share our knowledge, help people design amazing devices that improve lives, help businesses thrive, and advancing the exploration of our world.
 
 So feel free to explore this site, and let’s [be in touch](https://www.linkedin.com/in/dmivs/)!
